pp2/samples/switchbad1.out

*** Error line 4.
        default:
        ^^^^^^^
*** syntax error

