pp2/samples/switchbad1.decaf
int main() {
    switch(expr) {
        // Error: There must be at least one non-default case statement
        default:
            break;
    }
}
